<?xml version="1.0" encoding="utf-8"?>
<resources>
  
    <string name="app_name">HelloFacebookSample</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="app_id">524612907580454</string>
    <string name="exception">Exception: %1$s</string>
    <string name="publish">Publish</string>
    
    <string name="app_name">Dublin Jog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sName">Start</string>
    <string name="tName">Trophies</string>
    <string name="lName">Leaderboards</string><string name="eName">Events</string>
    <string name="location_prompt">Choose a route</string>
    
    <string-array name="Route">
    	<item>Isoldes Tower</item>
    	<item>Phoenix Park</item>
    	<item>Christ Church</item>
   	 	<item>National Botanic Gardens</item>
</string-array>
    

	<string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="StopWatch">00:00:00</string> 
	<string name="Well_done_jog_completed">Well done, jog completed!</string>
<string name="chronometer_initial_format">00:00:00</string>

<string name="exit">Exit</string>



</resources>
