<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/test1"
    android:orientation="vertical" >
    
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hfhg"
        android:background="#00000000" />
    

    <fragment
      
        android:id="@+id/map"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        
  
        class="com.google.android.gms.maps.MapFragment" />

	<Chronometer
	    android:id="@+id/StopWatch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/map"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="18dp"
	    android:text="@string/StopWatch"
	    android:textSize="40sp" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/stop"
	    android:layout_alignBottom="@+id/stop"
	    android:layout_centerHorizontal="true"
	    android:text="@string/Well_done_jog_completed"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:visibility="invisible" />

	<Button
	    android:id="@+id/stop"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/imageButton1"
	    android:layout_alignLeft="@+id/textView3"
	    android:layout_alignRight="@+id/textView3"
	    android:layout_marginBottom="24dp"
	    android:text="@string/Stop" />

</RelativeLayout>